syntax = "proto3";

package user;

service UserService {
  rpc FindOne(TestById) returns(Test);
}

message TestById {
  int32 id = 1;
}

message Test {
  int32 id = 1;
  string email = 2;
}